--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,33 @@
 @tailwind utilities;
 
 @layer base {
+    body {
+        @apply dark:bg-gray-900;
+    }
+    * {
+        @apply text-gray-500 select-none dark:text-white;
+    }
+    @keyframes textShine {
+        0% {
+            background-position: 0% 50%;
+        }
+        100% {
+            background-position: 100% 50%;
+        }
+    }
     .glow {
-        @apply bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text;
+        background: linear-gradient(
+            to right,
+            #7953cd 20%,
+            #00affa 30%,
+            #01cd9d 70%,
+            #9c4ada 80%
+        );
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-fill-color: transparent;
+        background-size: 500% auto;
+        animation: textShine 5s ease-in-out infinite alternate;
     }
 }
